--- a/style/main.css
+++ b/style/main.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 
-.heartimg {
+.Newheart {
     background-image: url("/img/dog.jpeg");
     width: 25px;
     height: 25px;
@@ -243,7 +243,9 @@ nav {
     height: 60px;
     display: flex;
     justify-content: space-between;
-    padding: 16px;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-right: 10px;
 
 }
 
@@ -252,8 +254,8 @@ nav {
 }
 
 .main_feed_article_peoples_header_leftimg>img {
-    width: 45px;
-    height: 45px;
+    width: 40px;
+    height: 40px;
 
     border-radius: 100%;
     padding: 1px;
@@ -293,6 +295,7 @@ nav {
 
 .main_feed_article_peoples_bottom_idwithcontents {
     padding: 5px 10px;
+    word-wrap: break-word;
 }
 
 .main_feed_article_peoples_bottom_idwithcontents>span:nth-child(1) {
@@ -375,7 +378,8 @@ nav {
 }
 
 .main_feed_article_peoples_header_left_wrapperforimg {
-    margin-left: 5px;
+    margin-left: 10px;
+    margin-top: 10px;
 }
 
 
@@ -428,6 +432,10 @@ a {
     margin-left: 10px;
 }
 
+.main_right_foryou_people_name {
+    margin-left: 10px;
+}
+
 .main_right_foryou_people_name>span:nth-child(1) {
     font-size: 14px;
     font-weight: 700;
@@ -444,10 +452,16 @@ a {
     height: 64px;
     display: flex;
     border-radius: 100%;
-    border: 1px solid#C62F90;
     background-image: url("https://mdn.mozillademos.org/files/7693/catfront.png");
     background-position: 10px 10px;
 
+}
+
+.storyboardCircle>img {
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    border: 1px solid #C62F90
 }
 
 .main_feed_article_storyboard ul {
